<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/dashboard"
        android:title="@string/dashboard_text"
        android:icon="@drawable/ic_dashboard_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/add"
        android:title="@string/add_text"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/list"
        android:title="@string/list_text"
        android:icon="@drawable/ic_list_black_24dp"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/more"
        android:title="@string/other_text"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="ifRoom"/>

</menu>