<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/item_bg"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/first_layout"
        android:layout_width="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_food"
            android:src="@drawable/index"
            android:layout_width="90dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            android:layout_height="90dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/first_layout"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_toEndOf="@+id/first_layout">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="5dp"
            android:text="@string/user_name_text"
            android:textColor="#000"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email_edit_text"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_user_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:hint="@string/email_edit_text"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:textColor="#000"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_text"
                android:layout_weight="3"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_user_phone_number"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:hint="@string/item_food_nb"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:textColor="#000"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>



</RelativeLayout>